--- a/ejercicio2modulo1/index.html
+++ b/ejercicio2modulo1/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>EJERCICIO LISTA · IMAGEN</title>
+    <title>EJERCICIO LISTA - IMAGEN</title>
 </head>
 <body>
     <h1>EJERCICIO LISTA - IMAGEN</h1>
