--- a/rocky/index.html
+++ b/rocky/index.html
@@ -4,6 +4,7 @@
      <head>
         <meta charset="UTF-8" />
         <title>Rocky The Cat</title>
+        <link rel="icon" type="image/png" href="./img/icon.png">
         <link rel="stylesheet" href="styles.css" />
      </head>
 
@@ -12,10 +13,10 @@
             <h1> ROCKY THE CAT </h1>
         </div>
          <div class="list">
-             <img src="./Rocky1.jpg" alt="rocky 1" height="100%"/>
+             <img src="./img/Rocky1.jpg" alt="rocky 1" height="100%"/>
          </div>
          <div class="list">
-            <img src="./Rocky1.jpg" alt="rocky 1" height="100%"/>
+            <img src="./img/Rocky1.jpg" alt="rocky 1" height="100%"/>
         </div>
      </body>
 
