--- a/evaluacion-final/adoptar.html
+++ b/evaluacion-final/adoptar.html
@@ -26,8 +26,8 @@
     </header>
     <section id="main">
         <h2>Adoptar</h2>
-        <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim
-            enim.</p>
+        <p>Siempre es mucho mejor que compralo
+            En Huellitas puedes adoptar tu próximo mejor amigo.</p>
         <ul class="lista">
             <li>
                 <article>
