--- a/evaluacion-final/contacto.html
+++ b/evaluacion-final/contacto.html
@@ -49,7 +49,7 @@
                 <label for="enviar"></label><input type="submit" class="boton">
             </form>
             <figure>
-                <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
+                <p>Para contactarse con nosotros completa el siguiente formulario, te contestaremos en breve.</p>
                 <img src="img/fotocontacto.jpg" alt="fotocontacto" width="90%">
             </figure>
         
