--- a/evaluacion-final/index.html
+++ b/evaluacion-final/index.html
@@ -43,26 +43,17 @@
             <ul>
                 <li>
                     <img src="img/searchpet.png" alt="searchpet">
-                    <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer
-                        enim
-                        neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper
-                        viverra nam.
+                    <p>Es muy facil encontrar algun perro o gato adecuado para vos, solo tienes que dar click en alguna de las dos opciones o directamente en el boton: Adoptar.
                     </p>
                 </li>
                 <li>
                     <img src="img/matchpet.png" alt="matchpet">
-                    <p>Il venenatis tellus in metus vulputate. Amet consectetur adipiscing elit pellentesque. Sed arcu
-                        non
-                        odio euismod lacinia at quis risus. Faucibus turpis in eu mi bibendum neque egestas cmonsu
-                        songue.
-                        Phasellus vestibulum lorem sed risus.
+                    <p>En nuestra galeria seguro vas ver alguna mascota de la que te vas a enamorar y que seguramente está esperando tu de tu compañía, cariño y atención. Puedes contactarnos diretamente desde el perfil que te gusta.
                     </p>
                 </li>
                 <li>
                     <img src="img/homepet.png" alt="homepet">
-                    <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque
-                        dignissim enim. Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan
-                        lacus vel facilisis
+                    <p>También nos puedes escribir desde la pagina de contacto contandonos a quién quieres adoptar o dejanos un mensaje para cualquier otra consulta.
                     </p>
                 </li>
             </ul>
