--- a/evaluacion-final/index.html
+++ b/evaluacion-final/index.html
@@ -48,7 +48,7 @@
                 </li>
                 <li>
                     <img src="img/matchpet.png" alt="matchpet">
-                    <p>En nuestra galeria seguro vas ver alguna mascota de la que te vas a enamorar y que seguramente está esperando tu de tu compañía, cariño y atención. Puedes contactarnos diretamente desde el perfil que te gusta.
+                    <p>En la galeria seguro verás alguna mascota de la que te vas a enamorar y que seguramente está esperando tu de tu cariño y compañía. Puedes contactarnos directamente desde el perfil que te gusta.
                     </p>
                 </li>
                 <li>
