--- a/ejercicio1javascript/index.html
+++ b/ejercicio1javascript/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estilo.css">
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
-    <script type="text/javascript" src="js/codigo.js"></script>
     <title>Ejercicio 1</title>
 </head>
 <body>
     <div class="contenido1">
-        <h1><u>Ejercicio 1:</u></h1>
+        <h1><u id="title">Ejercicio 1:</u></h1>
         <p>
            🤔 De acuerdo con la documentación de la unidad 1 <br/><strong>hay tres formas 
             de anexar un archivo javascript</strong> a nuestra página web. 
@@ -22,7 +21,7 @@
         </p>
         <h2>✅ Al refrescar la página web debería aparecer un cartel de diálogo donde deben ingresar su nombre</h2>
     </div>
-    
+    <script type="text/javascript" src="js/codigo.js"></script>
    
     
 </body>
