--- a/ejercicio3javascript/evaluacion3_gonzalez.html
+++ b/ejercicio3javascript/evaluacion3_gonzalez.html
@@ -13,7 +13,7 @@
 	
         <h1>Evaluación Unidad III</h1>
         
-        <h2>Operaciones</h2>
+        <h2>Operaciones Matemáticas</h2>
         <script type="text/javascript">
         document.write ('<p>','Resultado de la suma:', sum, '</p>') 
         document.write ('<p>','Resultado de la resta: ',resta,'</p>')
