--- a/evaluacion1javascript/adoptar.html
+++ b/evaluacion1javascript/adoptar.html
@@ -7,6 +7,7 @@
     <title>Huellitas Adopciones</title>
     <link rel="stylesheet" href="css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="js/evaluacion1.js"></script> 
 </head>
 
 <body id="page-adoptar">
@@ -28,8 +29,14 @@
         <h2>Adoptar</h2>
         <p>Siempre es mucho mejor que compralo
             En Huellitas puedes adoptar tu próximo mejor amigo.</p>
+            <p>
+                Ver:
+                <a href="#>" onclick="return ver('all')">Todos</a>
+                <a href="#>" onclick="return ver('dog')">Perros</a>
+                <a href="#>" onclick="return ver('cat')">Gatos</a>
+            </p>
         <ul class="lista">
-            <li>
+            <li class="dog all">
                 <article>
                     <img src="img/perro1.jpg" alt="perro1" />
                     <div class="pie">
@@ -59,7 +66,7 @@
                 </article>
             </li>
 
-            <li>
+            <li class="cat all">
                 <article>
                     <img src="img/gato1.jpg" alt="gato1" />
                     <div class="pie">
@@ -86,7 +93,7 @@
                     </div>
                 </article>
             </li>
-            <li>
+            <li class="dog">
                 <article>
                     <img src="img/perro2.jpg" alt="perro2" />
                     <div class="pie">
@@ -114,7 +121,7 @@
                     </div>
                 </article>
             </li>
-            <li>
+            <li class="cat">
                 <article>
                     <img src="img/gato2.jpg" alt="gato2" />
                     <div class="pie">
@@ -142,7 +149,7 @@
                     </div>
                 </article>
             </li>
-            <li>
+            <li class="dog">
                 <article>
                     <img src="img/perro3.jpg" alt="perro3" />
                     <div class="pie">
@@ -170,7 +177,7 @@
                     </div>
                 </article>
             </li>
-            <li>
+            <li class="cat">
                 <article>
                     <img src="img/gato5.jpg" alt="gato5" />
                     <div class="pie">
@@ -217,7 +224,7 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="js.evaluacion1.js"></script> 
+    
 
 </body>
 
