--- a/evaluacion1javascript/index.html
+++ b/evaluacion1javascript/index.html
@@ -7,10 +7,10 @@
     <title>Huellitas Adopciones</title>
     <link rel="stylesheet" href="css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 </head>
 
 <body id="page-home">
-
     <header class="color-p">
         <div id="logo">
             <a href="index.html"><img src="img/logo-huellitasadopciones.png" alt="logo-huellitasadopciones"></a>
@@ -85,7 +85,11 @@
             </ul>
         </div>
     </footer>
+    <script type="text/javascript">
 
+       alert("Hola! Bienvenido a Huellitas!!!")
+
+    </script>
 </body>
 
 </html>
