--- a/evaluacion1javascript/adoptar.html
+++ b/evaluacion1javascript/adoptar.html
@@ -27,7 +27,7 @@
     </header>
     <section id="main">
         <h2>Adoptar</h2>
-        <p>Siempre es mucho mejor que compralo
+        <p>Siempre es mucho mejor que comprarlo.
             En Huellitas puedes adoptar tu próximo mejor amigo.</p>
             <p>
                 Ver:
@@ -93,7 +93,7 @@
                     </div>
                 </article>
             </li>
-            <li class="dog">
+            <li class="dog all">
                 <article>
                     <img src="img/perro2.jpg" alt="perro2" />
                     <div class="pie">
@@ -121,7 +121,7 @@
                     </div>
                 </article>
             </li>
-            <li class="cat">
+            <li class="cat all">
                 <article>
                     <img src="img/gato2.jpg" alt="gato2" />
                     <div class="pie">
@@ -149,7 +149,7 @@
                     </div>
                 </article>
             </li>
-            <li class="dog">
+            <li class="dog all">
                 <article>
                     <img src="img/perro3.jpg" alt="perro3" />
                     <div class="pie">
@@ -177,7 +177,7 @@
                     </div>
                 </article>
             </li>
-            <li class="cat">
+            <li class="cat all">
                 <article>
                     <img src="img/gato5.jpg" alt="gato5" />
                     <div class="pie">
