--- a/evaluacion1javascript/index.html
+++ b/evaluacion1javascript/index.html
@@ -86,8 +86,8 @@
         </div>
     </footer>
     <script type="text/javascript">
-
-       alert("Hola! Bienvenido a Huellitas!!!")
+       var nombre = prompt ('Cuál es tu nombre? :')
+       alert("Hola! Bienvenido a Huellitas " + nombre + "!!!")
 
     </script>
 </body>
